Add JaCoCo coverage. [skip ci]