@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'jacoco'
 apply plugin: 'de.felixschulze.gradle.hockeyapp'
 
 static def appVersionName() {
@@ -60,6 +61,20 @@ android {
             }
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+        unitTests.all {
+            beforeTest { desc ->
+                println "Executing: ${desc.name} [${desc.className}]"
+            }
+
+            afterTest { desc, result ->
+                println "Result: ${result.resultType}"
+            }
+        }
+    }
 }
 
 hockeyapp {
@@ -67,6 +82,41 @@ hockeyapp {
     releaseType = 1
     notify = 1
     status = 2
+}
+
+tasks.withType(Test) {
+    maxHeapSize = "2048m"
+    jvmArgs += "-XX:MaxPermSize=512m"
+    forkEvery 50
+    maxParallelForks 3
+}
+
+def coverageSourceDirs = [
+        'src/main/java',
+]
+
+task testDebugJacoco(type: JacocoReport, dependsOn: "testDevDebugUnitTest") {
+    group = "Reporting"
+    description = "Generate Jacoco coverage reports after running tests."
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+    classDirectories = fileTree(
+            dir: './build/intermediates/classes/dev/debug',
+            excludes: ['**/R*.class',
+            ])
+    sourceDirectories = files(coverageSourceDirs)
+    executionData = files("$buildDir/jacoco/testDevDebugUnitTest.exec")
+    // Bit hacky but fixes https://code.google.com/p/android/issues/detail?id=69174.
+    // We iterate through the compiled .class tree and rename $$ to $.
+    doFirst {
+        new File("$buildDir/intermediates/classes/").eachFileRecurse { file ->
+            if (file.name.contains('$$')) {
+                file.renameTo(file.path.replace('$$', '$'))
+            }
+        }
+    }
 }
 
 dependencies {
@@ -82,7 +132,6 @@ dependencies {
     implementation 'com.android.support:design:25.4.0'
     implementation 'com.android.support:cardview-v7:25.4.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -93,6 +142,18 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.readystatesoftware.chuck:library:1.1.0'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.robolectric:robolectric:3.5.1'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation('com.squareup.assertj:assertj-android:1.1.0') {
+        exclude module: 'support-annotations'
+    }
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile('com.android.support.test:runner:0.4.1') {
+        exclude module: 'support-annotations'
+    }
+
 }
 
 apply plugin: 'com.google.gms.google-services'
